--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.55.4",
+    "@reown/appkit": "^1.0.4",
+    "@reown/appkit-adapter-wagmi": "^1.0.4",
+    "@tanstack/react-query": "^5.56.2",
     "@web3modal/wagmi": "^5.1.7",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "^2.21.6",
-    "wagmi": "^2.12.11"
+    "viem": "^2.21.14",
+    "wagmi": "^2.12.14"
   },
   "devDependencies": {
     "@types/node": "^20",
